# spotify_playlist_maker

./: Cargo.toml  newfile.txt  temp.txt  withArtists.txt
src/: main.rs
src/models/: mod.rs
src/requests/: mod.rs
src/routes/: mod.rs
static/: index.html  makePlaylist.html
