[package]
name = "spotify_playlist_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
rocket = { version = "0.5.0", features = ["serde_json", "json"] }
rocket-multipart-form-data = "0.10.7"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
